--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,3 +39,7 @@ jobs:
         env:
           FLEET_URL: ${{ secrets.FLEET_URL }}
           FLEET_API_TOKEN: ${{ secrets.FLEET_API_TOKEN }}
+          FLEET_WORKSTATIONS_ENROLL_SECRET: ${{ secrets.FLEET_WORKSTATIONS_ENROLL_SECRET }}
+          FLEET_DEDICATED_DEVICES_ENROLL_SECRET: ${{ secrets.FLEET_DEDICATED_DEVICES_ENROLL_SECRET }}
+  
+
