--- a/teams/personal-mobile-devices.yml
+++ b/teams/personal-mobile-devices.yml
@@ -6,4 +6,4 @@ controls:
 software:
 team_settings:
   secrets:
-    - secret: "FLEET_PERSONAL_MOBILE_DEVICES_ENROLL_SECRET" # Learn how: https://fleetdm.com/guides/secrets-in-scripts-and-configuration-profiles#gitops
+    - secret: "$FLEET_PERSONAL_MOBILE_DEVICES_ENROLL_SECRET" # Learn how: https://fleetdm.com/guides/secrets-in-scripts-and-configuration-profiles#gitops
